<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/roomDefaultIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:contentDescription="@string/default_room_icon_content_description"
            android:src="@android:drawable/ic_notification_overlay" />


        <LinearLayout
            android:id="@+id/titleLayout"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/roomNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Room name XXX" />

            <TextView
                android:id="@+id/roomInfoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/TextInfoColor"
                tools:text="(42 persons)" />
        </LinearLayout>
    </LinearLayout>

    <ViewSwitcher
        android:id="@+id/modeSwitcher"
        android:layout_width="448dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:inAnimation="@animator/fadein"
        android:outAnimation="@animator/fadeout">

        <LinearLayout
            android:id="@+id/normalMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="9">

            <TextView
                android:id="@+id/roomStatusLabel"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="5"
                android:minWidth="100dp"
                android:textSize="24sp"
                tools:text="&lt;status&gt;" />

            <Button
                android:id="@+id/calendarButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical|start"
                android:background="@drawable/calendar_small_grey"
                android:focusable="true"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bookingMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <ImageButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/close_button_states"
                android:contentDescription="@string/cancel_reservation" />

            <com.futurice.android.reservator.view.CustomTimeSpanPicker2
                android:id="@+id/timeSpanPicker2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/eventTitle"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:completionHint="Event title"
                android:completionThreshold="2"
                android:hint="@string/hint_event_title"
                android:lines="1"
                android:maxLines="1"
                android:inputType="textCapWords|textFilter"
                android:textColor="@color/button_color"
                android:textColorHint="@color/CalendarWeekTextColor" />

            <MultiAutoCompleteTextView
                android:id="@+id/eventAttendees"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:completionHint="Attendees separated by (,)"
                android:completionThreshold="2"
                android:hint="@string/hint_attendees"
                android:imeOptions="actionDone"
                android:inputType="textCapWords|textFilter"
                android:lines="1"
                android:maxLines="3"
                android:textColor="@color/button_color"
                android:textColorHint="@color/CalendarWeekTextColor" />

            <TextView
                android:id="@+id/hintText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hintText"
                android:textColor="@color/CalendarWeekTextColor" />

            <Button
                android:id="@+id/reserveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:focusable="true"
                android:text="@string/button_reserve"
                android:textColor="@android:color/white" />


        </LinearLayout>
    </ViewSwitcher>
</LinearLayout>
